fix: improved paragraph color contrast

--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -52,7 +52,7 @@ p {
   font-size: 20px;
   font-weight: 400;
   line-height: 30px;
-  color: map-get(tokens.$colors, "primary", "light");
+  color: map-get(tokens.$colors, "neutral", "dark");
   margin: 0;
 
   span.category {
